--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
   },
   "devDependencies": {
     "@beyonk/eslint-config": "latest",
-    "@sveltejs/adapter-auto": "next",
-    "@sveltejs/kit": "next",
-    "eslint": "^8.14.0",
+    "@sveltejs/adapter-auto": "^1.0.0",
+    "@sveltejs/kit": "^1.0.0",
+    "eslint": "^8.28.0",
+    "eslint-plugin-svelte3": "^4.0.0",
     "mkcert": "^1.5.0",
-    "svelte": "^3.44.0",
+    "svelte": "^3.54.0",
     "svelte2tsx": "^0.5.9",
-    "typescript": "^4.6.3",
-    "vite": "^3.0.0"
+    "tslib": "^2.4.1",
+    "typescript": "^4.9.3",
+    "vite": "^4.0.1"
   }
 }
